<resources>
    <string name="app_name">Greek Voter</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="welcome">Welcome Voter</string>
    <string name="logo_description">The logo for Greek Voter</string>
    <string name="create_session">Create\nNew Session</string>
    <string name="join_session">Join\nCurrent Session</string>
    <string name="admin_menu">Admin: View and Manage Results</string>

    <string name="join_header">Join Existing Session</string>
    <string name="session_name_join">Session Name:</string>
    <string name="session_password_join">Session Password:</string>
    <string name="join_session_button_join">Join Session</string>

    <string name="next">Next</string>

    <string name="session_title_join">Creating Your Session</string>
    <string name="session_name_create">Create Session Name</string>
    <string name="session_password_create">Create Session Password</string>
    <string name="confirm_password_create">Confirm Session Password</string>
    <string name="admin_description">
        The following field is for the admin of the session who can do the following:
        \n-Open and close voting for the session.
        \n-View results of the session.
        \n-Delete the session.
    </string>
    <string name="admin_create_password">Create Admin Password</string>
    <string name="admin_confirm_password">Confirm Admin Password</string>
    <string name="quit_create">Quit</string>
    <string name="submit_button">Submit</string>

    <string name="vote_thanks">Thanks!</string>
    <string name="vote_recorded">Your vote has been recorded</string>
    <string name="quit_session">Quit</string>
    <string name="join_session_again">Join Another\nSession</string>

    <string name="canidates_create">Adding Your Candidates</string>
    <string name="candidate_name_prompt_new">Candidate Name</string>
    <string name="category_name_new">Category Name</string>
    <string name="add_candidate_new">Add</string>
    <string name="candidate_list_new">Candidate List</string>
    <string name="end_voting_session_button_new">End Voting Session</string>
    <string name="view_results_button_new">Finalize and View Results</string>
    <string name="shareEditDeleteTitle">Edit or Delete the Candidate as \"%s\"</string>
    <string-array name="dialog_items">
        <item>Edit</item>
        <item>Delete</item>
    </string-array>
    <string name="cancel">Cancel</string>
    <string name="OK">OK</string>
    <string name="confirmMessage">Are you sure you want to delete the candidate? \"%s\"?</string>
    <string name="delete">Delete</string>
    <string name="tips_for_editing">
        TIP: Press and hold a candidates name\n
        to edit or delete it!
    </string>
    <string name="finish_session">Finalize Session</string>

    <string name="add_category_title">Add Categories</string>
    <string name="category_count">1/1</string>
    <string name="category_name">Category Name:</string>
    <string name="number_of_buttons">Number of Choices:</string>
    <string name="label_button_title">Label Buttons</string>
    <string name="button_count">1/2</string>
    <string name="button_value">Button Value:</string>
    <string name="button_label">Button Label:</string>
    <string name="submit_button_label">Complete This Button</string>
    <string name="submit_category">Complete This Category</string>
    <string name="quit">Quit</string>
    <string name="review">Review Session</string>

    <string name="admin_login_header">Admin Login</string>
    <string name="admin_login_name">Session Name:</string>
    <string name="admin_login_password">Admin Password:</string>
    <string name="admin_login_submit">Login</string>

    <string name="session_results">Session Results</string>
    <string name="session_name">Session Name</string>
    <string name="category">Category</string>
    <string name="refresh">Refresh Page</string>
    <string name="back_to_home">Home</string>
    <string name="delete_session">Delete this session</string>
    <string name="add_category">Add Category</string>

    <string name="voting_user_title">Voting in Progress...</string>


    <string-array name="candidates_array">
        <item>Emily</item>
        <item>Erik</item>
        <item>Mike</item>
        <item>Madden</item>
        <item>Reed</item>
    </string-array>




</resources>
