<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:columnCount="1"
    android:rowCount="3">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/vote_recorded"
        android:id="@+id/voteRecorded"
        android:textSize="75dp"
        android:layout_gravity="center" />

    <GridLayout
        android:layout_width="358dp"
        android:layout_height="292dp"
        android:layout_column="0"
        android:layout_row="1"
        android:columnCount="3"
        android:rowCount="1"
        android:layout_rowSpan="1">

        <Button
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:text="@string/quit_session"
            android:id="@+id/quitSessionButton"
            android:layout_column="0"
            android:layout_row="0"
            android:layout_gravity="center_horizontal|bottom" />

        <Button
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:text="@string/join_session_again"
            android:id="@+id/joinAnotherSessionButton"
            android:layout_column="2"
            android:layout_row="0"
            android:layout_gravity="center_horizontal|bottom" />
    </GridLayout>
</GridLayout>
