<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/GridLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="1"
    android:rowCount="4"
    android:background="#fdd835">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_vertical_margin"
        android:background="@android:color/holo_blue_dark">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/canidates_create"
            android:id="@+id/textView" />
    </LinearLayout>

    <GridLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="1"
        android:columnCount="1"
        android:rowCount="3"
        android:layout_gravity="center_horizontal"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_standard_margin_half">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/categoryNameEditText"
            android:layout_column="0"
            android:layout_row="0"
            android:layout_gravity="fill_horizontal"
            android:paddingBottom="@dimen/activity_standard_margin_half"
            android:hint="@string/category_name_new" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/candidateEditText"
            android:layout_column="0"
            android:layout_row="1"
            android:layout_gravity="fill_horizontal"
            android:hint="@string/candidate_name_prompt_new" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_candidate_new"
            android:id="@+id/addCandidateButton"
            android:layout_column="0"
            android:layout_row="2"
            android:layout_gravity="right" />

    </GridLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="2"
        android:columnCount="1"
        android:rowCount="2"
        android:layout_gravity="fill_horizontal"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/candidate_list_new"
            android:id="@+id/candidateListTextView"

            android:layout_gravity="center_horizontal|left" />

        <ListView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/list_view_short_height"
            android:id="@+id/listView"

            android:layout_gravity="fill_horizontal"
            android:background="@android:color/darker_gray" />
    </LinearLayout>

    <GridLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="3"
        android:columnCount="2"
        android:rowCount="1"
        android:layout_gravity="fill_horizontal|bottom">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="@dimen/x1.25_normal_button_dimens"
            android:text="@string/finish_session"
            android:id="@+id/viewResultsButton"
            android:layout_column="1"
            android:layout_row="0"
            android:layout_gravity="fill_horizontal|bottom" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/tips_for_editing"
            android:id="@+id/edittingTip"
            android:layout_column="0"
            android:layout_row="0"
            android:textColor="@android:color/black"
            android:gravity="center_horizontal" />
    </GridLayout>

</GridLayout>
