<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:columnCount="1"
    android:rowCount="4"
    android:clickable="false"
    android:background="#fdd835">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="0"
        android:layout_gravity="center_horizontal"
        android:background="@android:color/holo_blue_dark"
        android:padding="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/session_results"
            android:id="@+id/sessionResultsTitle"
            android:layout_gravity="center_vertical" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="1"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/category"
            android:id="@+id/categoryTitle"
            android:layout_gravity="center" />

        <ListView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/list_view_height"
            android:id="@+id/listView2"
            android:background="@android:color/darker_gray"
            android:layout_column="0"
            android:layout_row="0"
            android:layout_weight="25" />

    </LinearLayout>

    <GridLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="2"
        android:columnCount="2"
        android:rowCount="1"
        android:layout_gravity="bottom"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="@dimen/x1.25_normal_button_dimens"
            android:text="@string/refresh"
            android:id="@+id/refreshPageButton"
            android:layout_gravity="center|fill_horizontal"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnWeight="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="@dimen/x1.25_normal_button_dimens"
            android:text="@string/back_to_home"
            android:id="@+id/homeButton"
            android:layout_gravity="center|fill_horizontal"
            android:layout_row="0"
            android:layout_columnWeight="1"
            android:layout_column="1" />
    </GridLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_column="0"
        android:layout_row="3">

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/x1.25_normal_button_dimens"
            android:text="@string/delete_session"
            android:id="@+id/deleteThisSessionButton"
            android:layout_gravity="center_horizontal"
            android:background="@android:color/holo_red_dark"
            android:textSize="17dp" />
    </LinearLayout>

</GridLayout>
