<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateSessionActivity"
    android:columnCount="2"
    android:rowCount="6"
    android:columnOrderPreserved="false"
    android:clickable="true"
    android:id="@+id/gridLayout"
    android:longClickable="false">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/sessionName"
        android:layout_row="0"
        android:layout_column="0"
        android:text="@string/session_name_create" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/sessionNameEditText"
        android:layout_row="0"
        android:layout_column="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/session_password_create"
        android:id="@+id/sessionPassword"
        android:layout_row="1"
        android:layout_column="0" />

    <EditText
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:id="@+id/sessionPasswordEditText"
        android:layout_row="1"
        android:layout_column="1"
        android:inputType="textPassword" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/confirm_password_create"
        android:id="@+id/confirmPassword"
        android:layout_column="0"
        android:layout_row="2" />

    <EditText
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:id="@+id/confirmPasswordEditText"
        android:layout_row="2"
        android:layout_column="1"
        android:inputType="textPassword" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/start_date_create"
        android:id="@+id/startDate"
        android:layout_row="3"
        android:layout_column="0" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="8"
        android:id="@+id/startDateEditText"
        android:layout_row="3"
        android:layout_column="1"
        android:focusable="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/end_date_create"
        android:id="@+id/endDate"
        android:layout_row="4"
        android:layout_column="0" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="8"
        android:id="@+id/endDateEditText"
        android:layout_row="4"
        android:layout_column="1" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="@dimen/x1.25_normal_button_dimens"
        android:text="@string/quit_create"
        android:id="@+id/quitButton"
        android:layout_row="5"
        android:layout_column="0"
        android:layout_gravity="center|fill_horizontal|bottom" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="@dimen/x1.25_normal_button_dimens"
        android:text="@string/next"
        android:id="@+id/nextButton"
        android:layout_column="1"
        android:layout_row="5"
        android:layout_gravity="center|fill_horizontal|bottom" />
</GridLayout>
