<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".JoinSessionActivity"
    android:columnCount="1"
    android:rowCount="3">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="0">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/join_header"
            android:id="@+id/joinHeaderTextView"
            android:gravity="center" />
    </LinearLayout>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="1"
        android:columnCount="2"
        android:rowCount="2"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/session_name_join"
            android:id="@+id/sessionNameTextView"
            android:layout_column="0"
            android:layout_row="0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/session_password_join"
            android:id="@+id/sessionPasswordTextView"
            android:layout_column="0"
            android:layout_row="1"
            android:phoneNumber="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sessionNameEditText"
            android:layout_column="1"
            android:layout_row="0"
            android:inputType="text"
            android:ems="10"
            android:editable="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/sessionPasswordEditText"
            android:layout_column="1"
            android:layout_row="1" />
    </GridLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/join_session_button_join"
            android:id="@+id/joinSessionButton" />
    </LinearLayout>

</GridLayout>
